// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрисовать контент, если данные загрузились 1`] = `
<Modal
  animation={true}
  closer={true}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferCallHistoryModal"
  >
    <OfferCallHistoryModalContent
      data={
        Object {
          "items": Array [
            Object {
              "call_result": "SUCCESS",
              "source": "+79588319559",
              "talk_duration": "17",
              "time": "2020-04-02T15:55:05.806Z",
            },
          ],
        }
      }
    />
  </div>
</Modal>
`;

exports[`должен отрисовать лоадер пока данные грузятся 1`] = `
<Modal
  animation={true}
  closer={true}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferCallHistoryModal"
  >
    <div
      className="OfferCallHistoryModal__message"
    >
      <Loader
        color="blue"
        size="xl"
        type="dots"
      />
    </div>
  </div>
</Modal>
`;

exports[`ошибка загрузки должен отрисовать ошибку, если данные не загрузились 1`] = `
<Modal
  animation={true}
  closer={true}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferCallHistoryModal"
  >
    <div
      className="OfferCallHistoryModal__message"
    >
      <p
        className="OfferCallHistoryModal__error-text"
      >
        Что-то пошло не так.
      </p>
      <Link
        className="OfferCallHistoryModal__error-link"
        onClick={[Function]}
      >
        Попробовать еще раз
      </Link>
    </div>
  </div>
</Modal>
`;

exports[`ошибка загрузки должен перезапросить данные, после клика на "повторить" 1`] = `
<Modal
  animation={true}
  closer={true}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferCallHistoryModal"
  >
    <OfferCallHistoryModalContent
      data={
        Object {
          "items": Array [
            Object {
              "call_result": "SUCCESS",
              "source": "+79588319559",
              "talk_duration": "17",
              "time": "2020-04-02T15:55:05.806Z",
            },
          ],
        }
      }
    />
  </div>
</Modal>
`;
